--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,19 @@
     -->
     <title>React App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+    crossorigin="anonymous"
+  />
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="container">
       <div class="row">
-        <div class="col-md-6 offset-md-3 mt-5">
+        <div class="col-md-8 offset-md-2 mt-5">
         <div id="root"></div>
       </div>
       </div>
